# gciWire

./: .gitignore  CMakeLists.txt  format.sh  library.properties  readme.md
alt/: wire_apple.hpp
docs/: linux-i2c.md
examples/: CMakeLists.txt  main.cpp
gtests/: CMakeLists.txt  main-gtest.cpp
orig-ignore/: i2c_linux.hpp
src/: Wire.hpp  i2c.hpp  i2c_apple.hpp  return_type.hpp  sensor.hpp  wire_apple.hpp  wire_linux.hpp  wire_pico.hpp
src/orig-ignore/: i2c_linux.hpp
